[lab3] renamed some handlers
